--- a/sesion08Entregable/app/src/main/res/values/strings.xml
+++ b/sesion08Entregable/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="partidasguardadas">Last Saved Matches</string>
     <string name="codigo">Codigo jugador</string>
     <string name="nombre">Nombre jugador</string>
-    <string name="register">Registra los jugadores!</string>
+    <string name="register">Registra jugadores!</string>
 </resources>
