--- a/sesion08Entregable/app/src/main/res/values/strings.xml
+++ b/sesion08Entregable/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="matchof">Partida de:</string>
     <string name="detailsofsavedmatch">Details of a Saved Match</string>
     <string name="action_create_new">Crea un nuevo jugador</string>
-
+    <string name="action_menu">Menu</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
